--- a/index.html
+++ b/index.html
@@ -30,37 +30,37 @@
         <i class="fa-solid fa-face-grin-wide"></i>
         <a href="#">SOOMST</a>
       </div>
-      <div class="navbar__menu">
-        <ul class="navbar__menu">
-          <li class="navbar__menu__item active" data-link="#home">Home</li>
-          <li class="navbar__menu__item" data-link="#about">About</li>
-          <li class="navbar__menu__item" data-link="#skills">Skills</li>
-          <li class="navbar__menu__item" data-link="#work">Work</li>
-          <li class="navbar__menu__item" data-link="#testimonials">
-            Testimonials
-          </li>
-          <li class="navbar__menu__item" data-link="#contact">Contact</li>
-        </ul>
-      </div>
-
+      <ul class="navbar__menu">
+        <li class="navbar__menu__item" data-link="#home">Home</li>
+        <li class="navbar__menu__item" data-link="#about">About</li>
+        <li class="navbar__menu__item" data-link="#skills">Skills</li>
+        <li class="navbar__menu__item" data-link="#work">Work</li>
+        <li class="navbar__menu__item" data-link="#testimonials">
+          Testimonials
+        </li>
+        <li class="navbar__menu__item" data-link="#contact">Contact</li>
+      </ul>
       <!-- Toggle button -->
       <button class="navbar__toggle-btn">
         <i class="fas fa-bars"></i>
       </button>
     </nav>
+
     <!-- Home -->
     <section id="home">
-      <img
-        src="./imgs/aboutme.png"
-        alt="soom's profile photo"
-        class="home__avartar"
-      />
-      <h1 class="home__title">
-        Hello, <br />
-        I'm DreamCoder
-      </h1>
-      <h2 class="home__description">개발이 취미인 숨숨</h2>
-      <button class="home__contact">Contact Me</button>
+      <section class="section__container">
+        <img
+          src="./imgs/aboutme.png"
+          alt="soom's profile photo"
+          class="home__avartar"
+        />
+        <h1 class="home__title">
+          Hello, <br />
+          I'm DreamCoder
+        </h1>
+        <h2 class="home__description">개발이 취미인 숨숨</h2>
+        <button class="home__contact">Contact Me</button>
+      </section>
     </section>
     <!-- About -->
     <section id="about" class="section section__container">
@@ -177,13 +177,13 @@
         <h1>My Work</h1>
         <h3>projects</h3>
         <div class="work__categories">
-          <button class="category__btn">
+          <button class="category__btn selected" data-fillter="*">
             All<span class="category__count">8</span>
           </button>
-          <button class="category__btn">
+          <button class="category__btn" data-fillter="front">
             Front-end<span class="category__count">5</span>
           </button>
-          <button class="category__btn">
+          <button class="category__btn" data-fillter="back">
             Back-end<span class="category__count">3</span>
           </button>
         </div>
@@ -191,6 +191,7 @@
           <a
             href="https://github.com/soomst/practice-react-project-Building-a-Food-Order-App"
             class="project"
+            data-project="front"
             target="_blank"
           >
             <img
@@ -206,6 +207,7 @@
           <a
             href="https://github.com/soomst/Online-Shopping-mini-game"
             class="project"
+            data-project="front"
             target="_blank"
           >
             <img
@@ -221,6 +223,7 @@
           <a
             href="https://github.com/soomst/coordinates_test/tree/main/rabbits"
             class="project"
+            data-project="front"
             target="blank"
           >
             <img
@@ -236,6 +239,7 @@
           <a
             href="https://github.com/soomst/coordinates_test/tree/main/coordinates"
             class="project"
+            data-project="front"
             target="_blank"
           >
             <img
@@ -309,5 +313,11 @@
       </div>
       <p class="contact__rights">2022 soomst - All rights reserved</p>
     </section>
+
+    <!-- arrow up button -->
+
+    <button class="arrow-up">
+      <i class="fa-solid fa-arrow-up"></i>
+    </button>
   </body>
 </html>
